---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: ????
  Changes:
    - Updated to Factorio 2.0!
    - Renamed `after_script_reload` and to `after_reload_script`, and `after_mod_reload` to `after_reload_mods`
      to match the corresponding functions on `game`.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2024-04-13
  Changes:
    - Made including the "luassert" library optional via the "load_luassert" setting, defaulting to true.
  Bugfixes:
    - Fixed compatibility with latest version of debugadapter.
    - Fixed compatibility with factorio v1.1.107
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2023-12-27
  Changes:
    - Added better word wrapping to test output.
  Bugfixes:
    - Now works better with newest version of factorio debugadapter.
    - In debugadapter output, describe blocks now show the correct source file and line number.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2023-04-23
  Changes:
    - Made Test scenario more empty
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: Date: 2023-04-21
  Features:
    - Initial release