@@ -26,6 +26,7 @@ tests-running=Tests running
 tests-finished=Tests finished
 tests-load-error=Error encountered while loading tests
 run-tests=Reload mods and run tests
+rerun-tests=Rerun tests
 
 [factorio-test.progress-gui]
 title=Test run: __1__
